--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,10 @@ spring:
     view:
       prefix: /WEB-INF/view/ # JSP 파일이 위치한 디렉토리의 접두사를 설정합니다.
       suffix: .jsp # 뷰 이름에 자동으로 추가될 파일 확장자를 설정합니다.
-      
+  servlet:
+    multipart:
+      max-file-size: 20MB #최대 20MB
+      max-request-size: 20MB    
   datasource:
     url: jdbc:h2:mem:bankdb;MODE=MySQL  # 데이터베이스 연결을 위한 URL을 설정합니다.
     driver-class-name: org.h2.Driver  # JDBC 드라이버 클래스를 설정합니다.
