--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,4 +46,8 @@ logging:
   level:
     org.apache.ibatis: DEBUG  # MyBatis 로깅 레벨을 DEBUG로 설정하여, 실행되는 SQL 쿼리와 내부 로깅 정보를 콘솔에 출력합니다.
     
+
+file:
+  upload-dir: uploads/  # yml 파일에 파일 업로드 디렉토리 경로 설정
+  
     
