--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,20 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.8'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'war'
 }
+apply plugin: 'war'  // 추가
 
 group = 'com.tenco'
 version = '0.0.1-SNAPSHOT'
 
+bootWar {
+	archiveBaseName="bank" // 추가
+	archiveVersion="1.0.0-SNAPSHOT" // 추가
+}
+
 java {
-	sourceCompatibility = '21'
+	sourceCompatibility = '17'
 }
 
 configurations {
@@ -34,8 +41,13 @@ dependencies {
 	
 	// 의존성 추가 
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	// implementation 'javax.servlet:jstl' spring 3.x.x 버전에서 사용 안됨
+	
 	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '3.0.0'
+	// 신규 수정(테스트중) 
+	//implementation 'jakarta.servlet:jakarta.servlet-api' //스프링부트 3.0 이상
+    //implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api' //스프링부트 3.0 이상
+    //implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.0 이상
+	
 	// 암호화 
 	implementation 'org.springframework.security:spring-security-crypto'
 	
